src/objects/loan__CR_Org_Definition__c.object
<CustomObject>
    <fields>
        <fullName>loan__Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__CCA_Identifier__c</fullName>
        <label>CCA Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Cycle_Number__c</fullName>
        <label>Cycle Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Date_Created__c</fullName>
        <label>Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Equifax_Identifier__c</fullName>
        <label>Equifax Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Experian_Identifier__c</fullName>
        <label>Experian Identifier</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__PRBC_Program_Identifier__c</fullName>
        <label>PRBC Program Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Program_Date__c</fullName>
        <label>Program Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Program_Revision_Date__c</fullName>
        <label>Program Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Record_Descriptor__c</fullName>
        <label>Record Descriptor</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Record_Identifier__c</fullName>
        <defaultValue>&quot;HEADER&quot;</defaultValue>
        <label>Record Identifier</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reported_Address__c</fullName>
        <label>Reported Address</label>
        <length>96</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reporter_Name__c</fullName>
        <label>Reporter Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reporter_Phone__c</fullName>
        <label>Reporter Phone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reserved__c</fullName>
        <label>Reserved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Software_Vendor_Name__c</fullName>
        <label>Software Vendor Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Software_Version_Number__c</fullName>
        <label>Software Version Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Trans_Union_Identifier__c</fullName>
        <label>Trans Union Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Header Segment Definition</label>
    <nameField>
        <displayFormat>Metro2 - {YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Header ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CR Org Definition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>